updated gemfile and fixed alignment of set buttons

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,6 +63,10 @@ h1 {
     width:90%
 }
 
+.form-group {
+  width: 109.6px;
+}
+
 span.hidden {
     display: none !important;
   }
